# viral-scout-yt

./: .env.example  .gitignore  CLAUDE.md  ComandosImportantes.txt  Notas.txt  PROMPTS_CLAUDE_CODE.md  README.md  docker-compose.yml  setup.sh
.claude/: settings.local.json
.githooks/: pre-commit
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_search_quota_to_users.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/api/: admin.py  auth.py  explore.py  keywords.py  search.py
backend/app/models/: __init__.py  search.py  user.py  video.py
backend/app/repositories/: search_repository.py  user_repository.py  video_repository.py
backend/app/schemas/: auth.py  search.py
backend/app/services/: ai.py  analyzer.py  auth.py  explore.py  search.py  youtube.py
backend/tests/: conftest.py  test_auth.py  test_keywords.py  test_search.py
docs/skills/: architecture.md  backend-python.md  documentation.md  frontend-react.md
documents/: ComandosImportantes.txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/api/hooks/: useAuth.ts  useExplore.ts  useKeywords.ts  useSearch.ts  (+1 more)
frontend/src/lib/: apiError.ts  format.ts
frontend/src/pages/: Dashboard.tsx  Explore.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/src/stores/: filterStore.ts
(+20 files in other folders)
